Fix: Transaction more option modal clipping issue

--- a/src/components/Modal/MoreOptionModal.scss
+++ b/src/components/Modal/MoreOptionModal.scss
@@ -10,6 +10,7 @@
   gap: 1rem;
   background-color: $color-white;
   box-shadow: 0 0.25rem 12px rgba($color: black, $alpha: 0.25);
+  z-index: 2;
 
   &.modal--top {
     top: unset;
